objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Est_Comm_Mark_Mat_ORR_AUD__c</fullName>
        <formula>Total_mark_fee_split_mat__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Comm Mark Mat ORR AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Comm_Mark_ORR_AUD__c</fullName>
        <formula>Total_mark_fee_split__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Comm Mark ORR AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Comm_Mark_Ser_ORR_AUD__c</fullName>
        <formula>Total_mark_fee_split_serv__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Comm Mark Ser ORR AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Comm_Mark_Ser_ORR_Ad_Hoc_AUD__c</fullName>
        <formula>Total_mark_fee_split_serv_ad_hoc__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Comm Mark Ser ORR Ad Hoc AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_no_of_PAX_comparator__c</fullName>
        <inlineHelpText>Admin only.</inlineHelpText>
        <label>Est. no. of PAX comparator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Commission_Referrer__c</fullName>
        <formula>Referrer_Per__c * Gross_Revenue__c 
/*The $ value of this commission. This is 5% of gross revenue.*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Commission Referrer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Commissions_Fac_Ser_AUD__c</fullName>
        <formula>Estimated_Commissions_Facilitator_Ser__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated fee split Fac Ser AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Commissions_Facilitator_AUD__c</fullName>
        <formula>Estimated_Commissions_Facilitator__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated fee split Facilitator AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Commissions_Facilitator_Ser__c</fullName>
        <formula>Est_Comm_Faci_Ser_Calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(dep) Estimated fee split Fac, Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Commissions_Facilitator__c</fullName>
        <description>This needs to be a formula that just equals the previous field. i.e. &quot;Estimated commissions facilitator, services&quot;. For layout reasons can we just make it so.</description>
        <formula>Estimated_Commissions_Facilitator_Ser__c

/* This needs to be a formula that just equals the previous field. i.e. &quot;Estimated commissions facilitator, services&quot;. For layout reasons can we just make it so.*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Service fees only. Doesn&apos;t include any fixed facilitator fees</inlineHelpText>
        <label>(dep) Estimated fee split Facilitator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Commissions_Mark_Serv_AUD__c</fullName>
        <formula>Estimated_Commissions_Marketing_Service__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated fee split Mark Serv AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Commissions_Marketing_AUD__c</fullName>
        <formula>Estimated_Commissions_Marketing__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated fee split Marketing AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Commissions_Marketing_Mat_AUD__c</fullName>
        <formula>Estimated_Commissions_Marketing_Mat__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated fee split Marketing Mat AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Commissions_Marketing_Mat__c</fullName>
        <formula>Sell_1_Commission_Materials_Dollar__c + Sell_2_Commission_Materials_Dollar__c + Spot_1_Commission_Materials_Dollar__c + Spot_2_Commission_Materials_Dollar__c 
/*SUM of the $ commission fields for materials from the marketers, of this opp. */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(dep) Estimated fee split Mark, Mat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Commissions_Marketing_Service__c</fullName>
        <formula>Sell_1_Commission_Services_Dollar__c + Sell_2_Commission_Services_Dollar__c + Spot_1_Commission_Services_Dollar__c + Spot_2_Commission_Services_Dollar__c 
/*SUM of the $ commission fields for professional services from the marketers, of this opp*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(dep) Estimated fee split Mark, Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Commissions_Marketing__c</fullName>
        <formula>Estimated_Commissions_Marketing_Service__c + Estimated_Commissions_Marketing_Mat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SUM of the estimated fee split totals (service and materials)</inlineHelpText>
        <label>(dep) Estimated fee split Marketing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_ENS_Income__c</fullName>
        <formula>Profit_Before_Commissions__c - ( Estimated_Commissions_Marketing__c + Estimated_Commissions_Facilitator__c + Estimated_Commission_Referrer__c)



/*
(Profit Before Commissions - 
(Sum (Estimated Commissions Marketing and
Estimated Commissions Facilitator)
=
Estimated Ens Income
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Profit Before Commissions - 
(Sum (Estimated Commissions Marketing and
Estimated Commissions Facilitator and
Estimated Commissions Referrer)
=
Estimated Ens Income</inlineHelpText>
        <label>(dep) Estimated ENS Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_no_of_days__c</fullName>
        <label>Estimated no. of days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_no_of_participants__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the Number of Participants for the Job</inlineHelpText>
        <label>Estimated no. of participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenses_NOT_recoverable__c</fullName>
        <inlineHelpText>These are the expenses our client won&apos;t be paying for, or where we don&apos;t have a client.</inlineHelpText>
        <label>Expenses NOT recoverable</label>
        <summarizedField>Expense__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_chargeable_to_client__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.Expense_Type__c</field>
            <operation>notEqual</operation>
            <value>Facilitator fixed fee, Travel time, Referral / rebate, Materials fee split, Profit fee split, Services fee split</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Related_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_agreed__c</fullName>
        <label>Expenses agreed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expenses_recoverable__c</fullName>
        <description>SUM of expense records NOT of type Facilitator fee or fee split, of this opp</description>
        <inlineHelpText>Expenses that the client is paying for</inlineHelpText>
        <label>Expenses recoverable</label>
        <summarizedField>Expense__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Type__c</field>
            <operation>notEqual</operation>
            <value>Facilitator fixed fee, Referral / rebate, Materials fee split, Profit fee split, Services fee split, Travel time</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Expense__c.Expense_chargeable_to_client__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Related_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_Commission_Services_Dollar__c</fullName>
        <formula>Facilitator_1_Pec__c * Value_For_Services_Profit_Commissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead facilitator split services x In-House Service</inlineHelpText>
        <label>Facilitator 1 Commission Services ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_Invoice_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(dep) Facilitator 1 Invoice Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_Licence_Pec_Services__c</fullName>
        <inlineHelpText>Informational only. This field will populate with the network members default facilitator commission if the information has been defined against their licence.</inlineHelpText>
        <label>(dep.) Facilitator 1 Licence % Services</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_Pec__c</fullName>
        <label>Facilitator 1 %</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facilitator_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facilitator 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Presenter 1)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_confirmed_on__c</fullName>
        <label>(dep) Facilitator 1 confirmed on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_dollars_to_percent__c</fullName>
        <inlineHelpText>This field is here to aid the CSM in the case of F1 being paid a flat fee, and this needing to be converted into a %. Enter $ value here, and refer to related % field for the answer. NOTE: gross revenue must be final AND you will need to copy and paste %</inlineHelpText>
        <label>(deprecated) Facilitator 1 $ to %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_full_name__c</fullName>
        <label>(dep) Facilitator 1 full name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_invoice_reference__c</fullName>
        <inlineHelpText>Please enter the Invoice number or reference from this persons invoice.</inlineHelpText>
        <label>(dep.) Facilitator 1 invoice reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_percent_from_dollars__c</fullName>
        <formula>Facilitator_1_dollars_to_percent__c / Value_For_Services_Profit_Commissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter a $ value in &apos;Facilitator $ to %&apos; and it will convert it to the correct %. NOTE: gross revenue must be final AND you will need to copy and paste % into the Facilitator % field.</inlineHelpText>
        <label>(deprecated) Facilitator 1 % from $</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_total_marketing_days__c</fullName>
        <formula>Facilitator_1_Pec__c / Total_Marketing_Pec_Services__c * Days_sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(dep) Facilitator 1 total marketing days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facilitator_2_Commission_Services_Dollar__c</fullName>
        <formula>Facilitator_2_Pec__c * Value_For_Services_Profit_Commissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary co-facilitator split services x In-House Service</inlineHelpText>
        <label>Facilitator 2 Commission Services ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilitator_2_Invoice_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(dep) Facilitator 2 Invoice Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitator_2_Pec__c</fullName>
        <label>Facilitator 2 %</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facilitator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facilitator 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Presenter 2)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_2_confirmed_on__c</fullName>
        <label>(dep) Facilitator 2 confirmed on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facilitator_2_full_name__c</fullName>
        <label>(dep) Facilitator 2 full name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_2_invoice_reference__c</fullName>
        <inlineHelpText>Please enter the Invoice number or reference from this persons invoice.</inlineHelpText>
        <label>(dep.) Facilitator 2 invoice reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_2_total_marketing_days__c</fullName>
        <formula>Facilitator_2_Pec__c / Total_Marketing_Pec_Services__c * Days_sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(dep) Facilitator 2 total marketing days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facilitator_3_Commission_Services_Dollar__c</fullName>
        <formula>Facilitator_3_Pec__c * Value_For_Services_Profit_Commissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator 3 Commission Services ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilitator_3_Invoice_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(dep) Facilitator 3 Invoice Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitator_3_Pec__c</fullName>
        <label>Facilitator 3 %</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facilitator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facilitator 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Facilitator 3)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_3_confirmed_on__c</fullName>
        <label>(dep) Facilitator 3 confirmed on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facilitator_3_full_name__c</fullName>
        <label>(dep) Facilitator 3 full name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_3_invoice_reference__c</fullName>
        <inlineHelpText>Please enter the Invoice number or reference from this persons invoice.</inlineHelpText>
        <label>(dep.) Facilitator 3 invoice reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_3_total_marketing_days__c</fullName>
        <formula>Facilitator_3_Pec__c / Total_Marketing_Pec_Services__c * Days_sold__c</formula>
        <label>(dep) Facilitator 3 total marketing days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facilitator_Fees_AUD__c</fullName>
        <formula>Facilitator_Fees__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fac fixed and travel time fees AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilitator_Fees__c</fullName>
        <inlineHelpText>SUM of expense records of type Facilitator fee and Travel time 100%</inlineHelpText>
        <label>Facilitator fixed and travel time fees</label>
        <summarizedField>Expense__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Facilitator fixed fee, Travel time</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Related_Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Facilitator__c</fullName>
        <description>This is only for Open Corse R/T</description>
        <inlineHelpText>Enter the amount the Facilitator is to be paid for this open course</inlineHelpText>
        <label>(dep) Facilitator $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilitator_notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facilitator notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_type__c</fullName>
        <formula>IF(RecordType.DeveloperName=&quot;In_House&quot;,TEXT(Opportunity_Types__c),&quot;Open Course&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used for financial reporting.</inlineHelpText>
        <label>Finance type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_reporting_type__c</fullName>
        <inlineHelpText>Used for financial reporting only</inlineHelpText>
        <label>Financial reporting type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financial_reporting_type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_invoice_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First invoice created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue_AUD__c</fullName>
        <formula>Gross_Revenue__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Revenue AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue_Cal_AUD__c</fullName>
        <formula>Gross_Revenue_Cal__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Revenue Cal AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue_Cal__c</fullName>
        <description>This field is set in the process Opportunity, update, number shuffling (Invocable). Based on InHouse, OC Parent, OC PAX, the value will be different. IMPORTANT - The name of the field is no longer relevant, it actually informs Total Income rather than Gross revenue.</description>
        <label>Gross Revenue Cal</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue__c</fullName>
        <formula>Total_income__c -  Expenses_recoverable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_rev_not_inc_Deducted_fees_AUD__c</fullName>
        <formula>Gross_revenue_not_inc_Deducted_fees__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross rev not inc Deducted fees AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_revenue_from_PAX_AUD__c</fullName>
        <formula>Gross_revenue_from_PAX__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross revenue from PAX AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_revenue_from_PAX__c</fullName>
        <inlineHelpText>Total revenue. This is only displayed once the Commissions have been generated using the Ready to Calculate Commission checkbox</inlineHelpText>
        <label>Gross revenue from PAX</label>
        <summarizedField>Opportunity_Joiner__c.Child_Opportunity_Total_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Joiner__c.Is_PAX_Stage_Closed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Joiner__c.Is_Closed_Lost__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Joiner__c.Opportunity_Parent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gross_revenue_not_inc_Deducted_fees__c</fullName>
        <label>Gross revenue, not inc. Deducted fees</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Type__c</field>
            <operation>notEqual</operation>
            <value>Deducted Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_in_a_day__c</fullName>
        <defaultValue>7</defaultValue>
        <inlineHelpText>How many hours in a day for this job / client. Default is 7.</inlineHelpText>
        <label>Hours in a day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_House_Ref_Sell_1_formula_Helper_AUD__c</fullName>
        <formula>In_House_Referrer_Sell_1_formula_Helper__c/Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In House Ref Sell 1 formula Helper AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_House_Referrer_Sell_1_formula_Helper__c</fullName>
        <formula>(
Total_services_recommended_price__c - (Total_services_recommended_price__c * ENSI_split_services_Per__c) - (Total_services_recommended_price__c * Facilitator_1_Pec__c) - (Total_services_recommended_price__c * Facilitator_2_Pec__c) - (Total_services_recommended_price__c * Referrer_Per__c)
) *
(Sell_1_Pec__c / Total_Marketing_Pec_Services__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In-House Referrer Sell 1 formula Helper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Percent__c</fullName>
        <label>Invoice Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_created_manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice created manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_to_Network_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if the invoice will be sent to the Network Member, rather than the client.</inlineHelpText>
        <label>Invoice to Network Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Focus__c</fullName>
        <inlineHelpText>Select to topic/focus of the assignment</inlineHelpText>
        <label>Job Focus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Job_Focus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Job ID</inlineHelpText>
        <label>Job ID</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Record_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Process to stop process from looping</description>
        <label>Job Record Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_status__c</fullName>
        <formula>TEXT(Job_ID__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joiner_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify if the joining record has been created from the child record to the Parent for Open Courses. Not for end Users</description>
        <inlineHelpText>Used to identify if the joining record has been created from the child record to the Parent for Open Courses. Not for end Users</inlineHelpText>
        <label>Joiner Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <inlineHelpText>used for CAANZ reporting. Enter for all CAANZ open course registrations</inlineHelpText>
        <label>CAANZ Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOE_template__c</fullName>
        <formula>IF( ISPICKVAL(Opportunity_sub_types__c, &quot;Retainer&quot;),&quot;a1G1r000004Gvxj&quot;,
  IF(ISPICKVAL (Opportunity_sub_types__c,&quot;Consulting&quot;),&quot;a1G1r000004Gvxo&quot;,
    IF(ISPICKVAL (Opportunity_sub_types__c,&quot;WLD&quot;),&quot;a1G1r000004Gvxt&quot;,&quot;a1G1r000002tlLn&quot;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOE template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <defaultValue>&quot;English&quot;</defaultValue>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Opp_type__c</fullName>
        <description>Hidden field used to change a leads opportunity record type on conversion</description>
        <label>(deprecated) Lead Opp type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Opp_Record_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_Outcomes__c</fullName>
        <label>Learning Outcomes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you are migrating a legacy job please select it&apos;s ID here.</inlineHelpText>
        <label>Legacy Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Opportunities, migrated to</relationshipLabel>
        <relationshipName>Opportunities_migrated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_split_available_for_materials__c</fullName>
        <defaultValue>0.20</defaultValue>
        <label>Marketing split available for materials</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Material_Check__c</fullName>
        <inlineHelpText>Informational only. This field will tell you when your materials commissions total is equal to 100%.</inlineHelpText>
        <label>Materials % Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If True then materials task has been created</inlineHelpText>
        <label>Materials Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <label>Materials</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monthlies_resync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthlies resync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthlies_syncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthlies syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NAM Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (NAM Contact)</relationshipLabel>
        <relationshipName>Opportunities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NIP_Survey_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NIP Survey included</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>